<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.main.OrderFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_info"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:text="Order info:" />

        <TextView
            android:id="@+id/tv_oredr_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_s"
            tools:text="ID: 55443905" />

        <TextView
            android:id="@+id/tv_order_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_s"
            tools:text="Date: 18.11.2022" />

        <TextView
            android:id="@+id/tv_order_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_s"
            tools:text="Phone: +79992095832" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/goods_info"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:text="Goods: " />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_goods"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_order_complete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.button.MaterialButton
        android:layout_margin="16dp"
        android:text="@string/delivered_order"
        android:id="@+id/btn_order_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>