<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.main.gooddetail.GoodDetailFragment">
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_good_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/good_detail_name_s"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Name 456346" />

        <TextView
            android:id="@+id/tv_good_detail_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/good_detail_article_d"
            tools:text="456346" />

        <TextView
            android:id="@+id/tv_good_detail_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/good_detail_price_f"
            tools:text="Price: 100" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_quantity"
            android:layout_marginVertical="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <com.google.android.material.textfield.TextInputEditText
                android:lines="1"
                android:id="@+id/ti_quantity"
                android:hint="@string/quantity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="12" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_good_detail_summ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/good_detail_summ_2f" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_good_detail_pic"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_margin="16dp"
        android:scaleType="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_good_detail_complete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_reason"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_reason"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="2"
        android:hint="@string/enter_reason"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_reason"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="12" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_good_detail_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/save"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>